...
        editView.hidden = true
        self.volumeSlider.setThumbImage(UIImage(named: "slider"), forState: UIControlState.Normal)
        searchPhraseBar.delegate = self
        let defaults = NSUserDefaults.standardUserDefaults()
        if let language = defaults.stringForKey("Language"){
            if(language == "English"){
               searchPhraseBar.placeholder = "Search"
            }
            if(language == "Arabic"){
                searchPhraseBar.placeholder = "Arama"
                
            }
            if(language == "Greek"){
                searchPhraseBar.placeholder = "Έρευνα"
            }
        }
        tableView.delegate = self
        tableView.dataSource = self
        tableView.sectionHeaderHeight = 0
        
...
