...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="EMILYlingo" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="SiriWaveformView" customModule="EMILYlingo" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                <connections>
                                    <action selector="sortAlphabetically:" destination="Q8X-AO-kMY" eventType="touchUpInside" id="9he-6G-aPF"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jte-FJ-bJH">
                                <rect key="frame" x="45" y="107" width="230" height="44"/>
                                <state key="normal" title="Turkish">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="changeSpanish:" destination="Q8X-AO-kMY" eventType="touchUpInside" id="EJB-Qa-6CI"/>
                                </connections>
                            </button>
...
